src/objects/Data_Quality_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the reference (valid) account</description>
        <inlineHelpText>Please indicate the reference (valid) account</inlineHelpText>
        <label>Correct Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Quality Feedback</relationshipLabel>
        <relationshipName>Data_Quality_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Please describe the issue with as many details as possible.</inlineHelpText>
        <label>Detailed information</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the reference (valid) contact</description>
        <inlineHelpText>Please choose the reference (valid) contact</inlineHelpText>
        <label>Correct Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Quality Feedback</relationshipLabel>
        <relationshipName>Data_Quality_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the duplicate account</description>
        <inlineHelpText>Please choose the duplicate account</inlineHelpText>
        <label>Duplicate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Quality Feedback (Duplicate Account)</relationshipLabel>
        <relationshipName>Data_Quality_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the duplicate contact</description>
        <inlineHelpText>Please choose the duplicate contact</inlineHelpText>
        <label>Duplicate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Quality Feedback (Duplicate Contact)</relationshipLabel>
        <relationshipName>Data_Quality_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <inlineHelpText>Please indicate the issues encountered on the selected Account or Contact</inlineHelpText>
        <label>Issue(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Participation Information is missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address is not complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account or Contact is a duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Quality Feedback</label>
    <nameField>
        <displayFormat>DQF-{00000}</displayFormat>
        <label>Feedback Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Quality Feedback</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>EnsureDetailsEntered</fullName>
        <active>true</active>
        <description>If the issue(s) (also) contains other values than &quot;Account or Contact is a duplicate&quot;, make the field Comments /Detailed information mandatory.</description>
        <errorConditionFormula>AND(
OR( 
INCLUDES( Issues__c, &apos;Participation Information is missing&apos;),
INCLUDES( Issues__c, &apos;Address is not complete&apos;),
INCLUDES( Issues__c, &apos;Other&apos;),
ISBLANK( Issues__c)
),
ISBLANK( Comments__c )
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please provide a detailed description of the issue you are pointing out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EnsureDuplicateSelected</fullName>
        <active>true</active>
        <description>If the issue(s) contains &quot;Account or Contact is a duplicate&quot;, ensure that a duplicate record is indicated</description>
        <errorConditionFormula>AND( 
INCLUDES( Issues__c, &apos;Account or Contact is a duplicate&apos;),
OR(
AND(NOT(ISBLANK(Account__c)),ISBLANK(Duplicate_Account__c)),
AND(NOT(ISBLANK(Contact__c)),ISBLANK(Duplicate_Contact__c))
)
)</errorConditionFormula>
        <errorMessage>You indicated that the issue is a duplicate Account or Contact. You need to indicate the duplicate record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IdenticalReferenceAndDuplicateAccount</fullName>
        <active>true</active>
        <description>Ensure that the selected duplicate account is not the same as the selected reference account</description>
        <errorConditionFormula>AND (
Account__c = Duplicate_Account__c,
NOT( ISBLANK( Account__c ) )
)</errorConditionFormula>
        <errorDisplayField>Duplicate_Account__c</errorDisplayField>
        <errorMessage>The selected duplicate Account cannot be the same as the reference Account. If there is no duplicate Account, just leave this field empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IdenticalReferenceAndDuplicateContact</fullName>
        <active>true</active>
        <description>Ensure the selected duplicate contact is not the same as the selected reference contact.</description>
        <errorConditionFormula>AND(
Contact__c = Duplicate_Contact__c, 
NOT( ISBLANK( Contact__c ) ) 
)</errorConditionFormula>
        <errorDisplayField>Duplicate_Contact__c</errorDisplayField>
        <errorMessage>The selected duplicate Contact cannot be the same as the reference Contact. If there is no duplicate Contact, just leave this field empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoMoreEditOnClosedItems</fullName>
        <active>true</active>
        <description>Stop the users (except for the System Admin) to edit items marked as &quot;Done&quot;</description>
        <errorConditionFormula>AND (
 ISPICKVAL(PRIORVALUE( Status__c ), &apos;Done&apos;),
 $Profile.Name  &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorMessage>Editing of feedback records that are marked as &quot;Done&quot; is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OnlyOneDuplicatePerRecord</fullName>
        <active>true</active>
        <description>Ensure that either an Account or a Contact is selected, but not both at the same time.</description>
        <errorConditionFormula>ISBLANK( Account__c ) = ISBLANK( Contact__c )</errorConditionFormula>
        <errorMessage>You need to select either a reference Account or a Contact, but not both at the same time.</errorMessage>
    </validationRules>
</CustomObject>